Added Authentication Service + AuthenticationRoutes, migrate createUser to register
